tests/instanceof/instanceof.exp
Error ------------------------------------------------------------------------------------------------------ any.js:12:6

Cannot cast `a` to empty because `A` [1] is incompatible with empty [2]. [incompatible-cast]

   any.js:12:6
   12|     (a: empty); // error A ~> empty
            ^

References:
   any.js:11:18
   11| if (a instanceof A) {
                        ^ [1]
   any.js:12:9
   12|     (a: empty); // error A ~> empty
               ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ any.js:15:6

Cannot cast `a` to empty because `P` [1] is incompatible with empty [2]. [incompatible-cast]

   any.js:15:6
   15|     (a: empty); // error P ~> empty
            ^

References:
   any.js:14:18
   14| if (a instanceof P) {
                        ^ [1]
   any.js:15:9
   15|     (a: empty); // error P ~> empty
               ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ any.js:16:6

Cannot cast `a.n` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   any.js:16:6
   16|     (a.n: empty); // error number ~> empty
            ^^^

References:
   any.js:5:6
    5|   n: number;
            ^^^^^^ [1]
   any.js:16:11
   16|     (a.n: empty); // error number ~> empty
                 ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- instanceof.js:17:34

Cannot assign `'1337'` to `g.foo` because string [1] is incompatible with number [2]. [incompatible-type]

   instanceof.js:17:34
   17|     if (g instanceof X1) g.foo = '1337';  // oops
                                        ^^^^^^ [1]

References:
   instanceof.js:4:17
    4| class X1 { foo: number; };
                       ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- instanceof.js:34:42

Cannot assign `'1337'` to `g.bar.foo` because string [1] is incompatible with number [2]. [incompatible-type]

   instanceof.js:34:42
   34|     if (g.bar instanceof X1) g.bar.foo = '1337';  // oops
                                                ^^^^^^ [1]

References:
   instanceof.js:4:17
    4| class X1 { foo: number; };
                       ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- instanceof.js:51:50

Cannot assign `'1337'` to `g.baz.bar.foo` because string [1] is incompatible with number [2]. [incompatible-type]

   instanceof.js:51:50
   51|     if (g.baz.bar instanceof X1) g.baz.bar.foo = '1337';  // oops
                                                        ^^^^^^ [1]

References:
   instanceof.js:4:17
    4| class X1 { foo: number; };
                       ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- instanceof.js:83:5

Cannot perform arithmetic operation because array type [1] is not a number or bigint. [unsafe-arithmetic]

   instanceof.js:83:5
   83|     x++; // error
           ^

References:
   instanceof.js:81:18
   81| function foo1(x: Array<number> | number) {
                        ^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- instanceof.js:85:7

Cannot assign `123` to `x[0]` because an index signature declaring the expected key / value type is missing in
number [1]. [incompatible-use]

   instanceof.js:85:7
   85|     x[0] = 123; // error
             ^

References:
   instanceof.js:81:34
   81| function foo1(x: Array<number> | number) {
                                        ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- instanceof.js:90:26

The right-hand side of an `instanceof` expression must be an object, but got string [1]. [invalid-in-rhs]

   90|   const y = x instanceof 'bad'; // error
                                ^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- instanceof.js:91:20

The right-hand side of an `instanceof` expression must be an object, but got string [1]. [invalid-in-rhs]

   91|   if (x instanceof 'bad') {x;} // error
                          ^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- instanceof.js:93:28

The right-hand side of an `instanceof` expression must be an object, but got mixed [1]. [invalid-in-rhs]

   93|   if (x instanceof ('bad': mixed)) {x;} // error
                                  ^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- instanceof.js:110:6

Cannot cast `x` to empty because `B` [1] is incompatible with empty [2]. [incompatible-cast]

   instanceof.js:110:6
   110|     (x: empty); //error
             ^

References:
   instanceof.js:109:20
   109|   if (x instanceof A.B) {
                           ^^^ [1]
   instanceof.js:110:9
   110|     (x: empty); //error
                ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- instanceof.js:124:6

Cannot cast `x` to empty because `B` [1] is incompatible with empty [2]. [incompatible-cast]

   instanceof.js:124:6
   124|     (x: empty); //error
             ^

References:
   instanceof.js:119:9
   119|   class B {}
                ^ [1]
   instanceof.js:124:9
   124|     (x: empty); //error
                ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- instanceof.js:136:20

The right-hand side of an `instanceof` expression must be an object, but got null or undefined [1]. [invalid-in-rhs]

   instanceof.js:136:20
   136|   if (x instanceof A?.B) { //error
                           ^

References:
   instanceof.js:134:18
   134|   declare var A: ?{ B: Class<B>};
                         ^^^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- instanceof.js:137:6

Cannot cast `x` to empty because `B` [1] is incompatible with empty [2]. [incompatible-cast]

   instanceof.js:137:6
   137|     (x: empty); //error
             ^

References:
   instanceof.js:132:9
   132|   class B {}
                ^ [1]
   instanceof.js:137:9
   137|     (x: empty); //error
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- mixed.js:6:6

Cannot cast `x` to number because `C` [1] is incompatible with number [2]. [incompatible-cast]

   mixed.js:6:6
   6|     (x: number);
           ^

References:
   mixed.js:5:20
   5|   if (x instanceof C) {
                         ^ [1]
   mixed.js:6:9
   6|     (x: number);
              ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- mixed.js:40:7

Cannot get `x.p` because property `p` is missing in `Object` [1]. [prop-missing]

   mixed.js:40:7
   40|     x.p;
             ^

References:
   mixed.js:39:20
   39|   if (x instanceof Object) {
                          ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- mixed.js:46:5

Cannot call `x` because a call signature declaring the expected parameter / return type is missing in `Function` [1].
[prop-missing]

   mixed.js:46:5
   46|     x();
           ^

References:
   mixed.js:45:20
   45|   if (x instanceof Function) {
                          ^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- objproto.js:4:4

Cannot cast `c.p` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   objproto.js:4:4
   4|   (c.p: empty); // error: string ~> empty
         ^^^

References:
   objproto.js:1:14
   1| class C { p: string }
                   ^^^^^^ [1]
   objproto.js:4:9
   4|   (c.p: empty); // error: string ~> empty
              ^^^^^ [2]



Found 19 errors
